# akilli_bitki_projesi

./: .gitignore  CMakeLists.txt  README.md
components/actuator_task/: CMakeLists.txt  actuator_task.c
components/actuator_task/include/: actuator_task.h
components/sensor_task/: CMakeLists.txt  sensor_task.c
components/sensor_task/include/: sensor_task.h
components/sys_core/: CMakeLists.txt  sys_core.c
components/sys_core/include/: config_example.h  sys_core.h
main/: CMakeLists.txt  main.c
